# course-management-system

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
api/core/: documentation.py  exceptions.py  pagination.py  permissions.py  responses.py  viewsets.py
api/v1/: urls.py  views.py
api/v1/auth/: serializers.py  urls.py  views.py
api/v1/courses/: serializers.py  urls.py  views.py
api/v1/homework/: serializers.py  submissions_urls.py  urls.py  views.py
api/v1/lectures/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
courses/: admin.py  models.py
homework/: admin.py  models.py
lectures/: admin.py  models.py
users/: admin.py  managers.py  models.py
