[project]
name = "course-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "psycopg2-binary>=2.9.0",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.0",
    "drf-spectacular>=0.27.0",
    "python-decouple>=3.8",
    "Pillow>=10.0.0",
]
